Changes in tooltips

--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -263,8 +263,8 @@
                 <mat-icon class="full-icon-secondary">category</mat-icon>
                <div class="list-save-template">
                     <mat-list role="list">
-                        <mat-list-item (click)="openSaveTemplateBox()" role="listitem">Save new template</mat-list-item>
-                        <mat-list-item (click)="openUploadDeleteLoadTemplateBox()" role="listitem">Update, load, delete template</mat-list-item>
+                        <mat-list-item (click)="openSaveTemplateBox()" role="listitem">save new template</mat-list-item>
+                        <mat-list-item (click)="openUploadDeleteLoadTemplateBox()" role="listitem">update, load, delete template</mat-list-item>
                     </mat-list>
                 </div>
             </button>
