--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -296,8 +296,8 @@
                 <mat-icon class="full-icon-secondary">category</mat-icon>
                 <div class="list-save-template">
                     <mat-list role="list">
-                        <mat-list-item (click)="openSaveTemplateBox()" role="listitem">Save new template</mat-list-item>
-                        <mat-list-item (click)="openUploadDeleteLoadTemplateBox()" role="listitem">Update, load, delete
+                        <mat-list-item (click)="openSaveTemplateBox()" role="listitem">save new template</mat-list-item>
+                        <mat-list-item (click)="openUploadDeleteLoadTemplateBox()" role="listitem">update, load, delete
                             template</mat-list-item>
                     </mat-list>
                 </div>
@@ -310,7 +310,7 @@
             </button>
             <br>
             <button *ngIf="true" (click)="isTemplate=='true'?saveTemplate() : openDialog('save')" mat-icon-button
-                matTooltip="{{isTemplate == 'true' ? 'Save Template' : 'Save Brand Matrix'}}"
+                matTooltip="{{isTemplate == 'true' ? 'Save Template' : 'save brand matrix'}}"
                 matTooltipPosition="right">
                 <mat-icon class="full-icon">cloud_upload
                 </mat-icon>
