--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
@@ -179,7 +179,7 @@
 
     <mat-card class="example-card">
         <mat-card-header>
-            <mat-card-title>Select Ranking
+            <mat-card-title>Option Type
 
             </mat-card-title>
         </mat-card-header>
@@ -217,11 +217,11 @@
 
     <mat-card class="example-card">
         <mat-card-header>
-            <mat-card-title>Columns</mat-card-title>
+            <mat-card-title>Question and Options</mat-card-title>
         </mat-card-header>
         <mat-card-content>
             <div style="text-align: center;">
-                <div style="font-size: 16px;margin: 20px;color: #48535e;">Copy & Paste Columns</div>
+                <div style="font-size: 16px;margin: 20px;color: #48535e;">Paste Questions & Options </div>
                 <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
             </div>
             <div style="display: flex; justify-content: center; align-items: center;">
@@ -451,7 +451,7 @@
                     <div>
 
                         <!-- IF ELSE TEMPLATE INPUTS  -->
-                   
+
                         <div
                             *ngIf="y !== 0  &&  columnName.includes('options') == true && this.bmxItem.componentSettings[0].rankType == 'radio'">
                             <div *ngFor="let checkBoxName of testName[columnName].split(','); let m = index"
