--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -166,7 +166,7 @@ position: absolute;height: 54px;align-items: center">
         matTooltip="setup settings" matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
         <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
     </button>
-    <button (click)="showModalTable = true" class="add-column" matTooltip="Update names" matTooltipPosition="above"
+    <button (click)="showModalTable = true" class="add-column" matTooltip="update names" matTooltipPosition="above"
     *ngIf="i !== selectedIndex" mat-icon-button>
     <mat-icon style="font-size: 25px;" class="full-icon"> text_fields</mat-icon>
 </button>
