--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -172,7 +172,7 @@
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
         <button (click)="toggleImageUploadBox(); editSingleTableCells = false" class="add-column"
-            matTooltip="uploadImages" matTooltipPosition="above" mat-icon-button aria-label="ranking">
+            matTooltip="upload images" matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">collections</mat-icon>
         </button>
         <button (click)="showModalTable = true" class="add-column" matTooltip="update names" matTooltipPosition="above"
