--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -168,14 +168,14 @@
         </button>
 
         <button (click)="openWindow(i, false)" class="add-column"
-            matTooltip="Setup settings" matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
+            matTooltip="setup settings" matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
         <button (click)="toggleImageUploadBox(); editSingleTableCells = false" class="add-column"
             matTooltip="uploadImages" matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">collections</mat-icon>
         </button>
-        <button (click)="showModalTable = true" class="add-column" matTooltip="Update names" matTooltipPosition="above"
+        <button (click)="showModalTable = true" class="add-column" matTooltip="update names" matTooltipPosition="above"
         *ngIf="i !== selectedIndex" mat-icon-button>
         <mat-icon style="font-size: 25px;" class="full-icon"> text_fields</mat-icon>
     </button>
@@ -194,7 +194,7 @@
     <path d="M0 0h24v24H0z" fill="none"></path>
   </svg></div>
      <!-- Cards Criteria-->
-     <mat-card appearance="outlined" class="example-card">
+     <mat-card class="example-card">
       <mat-card-header>
         <mat-card-title>Category</mat-card-title>
       </mat-card-header>
@@ -242,7 +242,7 @@
     </mat-card>
 <br>
     <!-- Cards Test Name-->
-    <mat-card appearance="outlined" class="example-card">
+    <mat-card class="example-card">
       <mat-card-header>
         <mat-card-title>Columns</mat-card-title>
       </mat-card-header>
@@ -267,7 +267,7 @@
 <br>
 
    <!-- Cards Select Ranking-->
-    <mat-card appearance="outlined" class="example-card">
+    <mat-card class="example-card">
       <mat-card-header>
         <mat-card-title>Select Ranking & Criteria</mat-card-title>
       </mat-card-header>
@@ -295,7 +295,7 @@
                     (selectionChange)="criteriaSelection(newselectedCriteria)">
                   <mat-option *ngFor="let criteriaItem of CRITERIA; let c = index" [value]="criteriaItem">
                     {{criteriaItem.name}}
-                    <mat-icon matTooltip="Double click to delete criteria" matTooltipPosition="right"
+                    <mat-icon matTooltip="double click to delete criteria" matTooltipPosition="right"
                         style="cursor: pointer; font-size: 15px; color: #ee7f25;" (dblclick)="deleteCriteria(c);">
                         cancel</mat-icon>
                   </mat-option>
@@ -446,7 +446,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
         </svg></div>
 
     <!-- Cards Test Name-->
-    <mat-card appearance="outlined" class="example-card">
+    <mat-card class="example-card">
       <mat-card-header>
         <mat-card-title>Columns</mat-card-title>
       </mat-card-header>
@@ -469,7 +469,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
 
     </mat-card>
     <br>
-    <mat-card appearance="outlined" class="example-card">
+    <mat-card class="example-card">
         <mat-card-header>
             <mat-card-title>Select Ranking & Criteria</mat-card-title>
         </mat-card-header>
@@ -497,7 +497,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                                 (selectionChange)="criteriaSelection(newselectedCriteria)">
                                 <mat-option *ngFor="let criteriaItem of CRITERIA; let c = index" [value]="criteriaItem">
                                     {{criteriaItem.name}}
-                                    <mat-icon matTooltip="Double click to delete criteria" matTooltipPosition="right"
+                                    <mat-icon matTooltip="double click to delete criteria" matTooltipPosition="right"
                                         style="cursor: pointer; font-size: 15px; color: #ee7f25;"
                                         (dblclick)="deleteCriteria(c);">
                                         cancel</mat-icon>
@@ -541,7 +541,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
     </mat-card>
     <br>
 <!-- Cards Criteria-->
-<mat-card appearance="outlined" class="example-card">
+<mat-card class="example-card">
   <mat-card-header>
       <mat-card-title>Category</mat-card-title>
   </mat-card-header>
