ckeditor dependency updated

--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
@@ -15,13 +15,15 @@
         [innerHTML]="bmxItem.componentText | safe: 'html'"></div>
 </ng-template>
 
-<!-- <div cdkDrag>
-    <ckeditor *ngIf="openSettings && bmxClientPageOverview" id="txtTexto" class="ckeditorcev"
+<div cdkDrag>
+    <ckeditor *ngIf="openSettings && bmxClientPageOverview" [editor]="Editor" id="txtTexto" class="ckeditorcev"
         style="animation: fadeIn 0.5s ease forwards;" [ngModelOptions]="{standalone: true}"
         [(ngModel)]="bmxItem.componentText" [data]="bmxItem.componentText" [config]="ckconfig">
     </ckeditor>
-</div> -->
+</div>
 
+<ckeditor *ngIf="openSettings && bmxClientPageOverview" id="txtTexto" class="ckeditorcev" [editor]="Editor"
+          [(ngModel)]="bmxItem.componentText" [ngModelOptions]="{standalone: true}"  [data]="bmxItem.componentText"></ckeditor>
 
 <!-- <div style="display: flex;justify-content: space-around; align-items: center;width: 90vw;">
     <div style="text-align: left;width: 400px;">
@@ -31,7 +33,7 @@
     <div style="text-align: left;width: 300px;">email</div>
     <div style="text-align: left;width: 300px;">phone</div>
 </div> -->
-<!-- 
+<!--
 <div style="display: flex;flex-direction: column;justify-content: center;align-items: center;">
     <div style="font-family: auto;
     font-size: 16px;
