--- a/src/app/bmx/components/participants-email/participants-email.component.html
+++ b/src/app/bmx/components/participants-email/participants-email.component.html
@@ -108,10 +108,10 @@
                 <!-- CKEDITOR -->
                 <div>
                     <!-- <div style="margin: 30px;" [innerHTML]="brandMatrixObjects[1].componentText | safe: 'html'"></div> -->
-                    <!-- <ckeditor id="txtTexto" style="animation: fadeIn 0.5s ease forwards;"
-                        [ngModelOptions]="{standalone: true}" [(ngModel)]="brandMatrixObjects[1].componentText"
-                        [data]="brandMatrixObjects[1].componentText" [config]="ckconfig">
-                    </ckeditor> -->
+                    <ckeditor [editor]="Editor" id="txtTexto" style="animation: fadeIn 0.5s ease forwards;"
+                         [(ngModel)]="brandMatrixObjects[1].componentText"
+                        [data]="brandMatrixObjects[1].componentText" >
+                    </ckeditor>
                     <div style="display: flex;justify-content: flex-end;">
                         <button mat-raised-button style="background-color: #003180;color:white;margin:20px"
                             (click)="sendEmail()">
@@ -168,7 +168,7 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
                     <td mat-cell *matCellDef="let element"> {{element.FirstName}} </td>
                 </ng-container>
-      
+
                 <ng-container matColumnDef="LastName">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
                     <td mat-cell *matCellDef="let element"> {{element.LastName}} </td>
