--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
@@ -17,13 +17,10 @@
 
 <div cdkDrag>
     <ckeditor *ngIf="openSettings && bmxClientPageOverview" [editor]="Editor" id="txtTexto" class="ckeditorcev"
-        style="animation: fadeIn 0.5s ease forwards;" [ngModelOptions]="{standalone: true}"
-        [(ngModel)]="bmxItem.componentText" [data]="bmxItem.componentText" [config]="ckconfig">
+        style="animation: fadeIn 0.1s ease forwards;" [ngModelOptions]="{standalone: true}"
+        [(ngModel)]="bmxItem.componentText" [data]="bmxItem.componentText" >
     </ckeditor>
 </div>
-
-<ckeditor *ngIf="openSettings && bmxClientPageOverview" id="txtTexto" class="ckeditorcev" [editor]="Editor"
-          [(ngModel)]="bmxItem.componentText" [ngModelOptions]="{standalone: true}"  [data]="bmxItem.componentText"></ckeditor>
 
 <!-- <div style="display: flex;justify-content: space-around; align-items: center;width: 90vw;">
     <div style="text-align: left;width: 400px;">
